Trying to ssh connect to a computer without the service gives a non useful error
(The bug has been initially reported on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/1397541)
'I was trying to connect to another computer using ssh/sftp in nautilus in order to access its files. After typing the computer's address with the protocol and clicking "connect" I was shown this error:
"Oops! Something went wrong. Don't have permission to access the requested location."
It turned out I do not have the package openssh-server installed on the other computer. At the begginning I was irritated because I was sure it is a permission problem as the error stated. In my opinion Nautilus should be able to recognise there is no ssh server installed on the other computer and tell the user in the error what they should do to fix the reason behind it.'
It's still an issue on GNOME 3.30, entering "ssh://" from a device without ssh (like another computer or a router) is enough to trigger the issue