 src/nautilus-windows-slot.c:Handled error message

When trying to connect to a machine in which server application is not installed or is inactive,
nautilus shows-"Unhandled message error: Connection refused by server"

The error dialogue is confusing to the users.
Nautilus should be able to handle the error other than showing it as Unhandled message error.

To fix this issue, handle the G_IO_ERROR_CONNECTION_REFUSED case in nautilus-windows-slot.c file,
with a detailed error message and also give a possible reason for the error.

https://gitlab.gnome.org/GNOME/nautilus/issues/855